--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -243,7 +243,7 @@ sk:
       testmail: 
         delivery_error: 'Testmail delivery error'
         delivery_success: 'Testmail sent successfully'
-        error: 'Testmail error: %{e}'
+        error: "Testmail error: %{e}"
   administration: Administrácia
   all: "Všetky"
   all_departments: "Oddelenia"
@@ -654,7 +654,7 @@ sk:
   option_values: "Hodnoty opcií"
   options: Opcie
   or: alebo
-  or_over_price: %{price} alebo viac
+  or_over_price: "%{price} alebo viac"
   order: Objednávka
   order_adjustments: "Order adjustments"
   order_confirmation_note: ""
